--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .menu-container{
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding: 30px;
+    justify-content: space-between;
+    padding: 30px 200px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 
@@ -27,6 +27,9 @@ li{
     display: flex;
     align-items: center;
     gap: 20px;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    padding: 10px;
     
 }
 li>a{
@@ -46,4 +49,75 @@ li>a{
 }
 .menu-icon{
     cursor: pointer;
+}
+.banner-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 200px;
+}
+.banner-img{
+    width: 600px;
+    margin-right:200px;
+    
+}
+.goat-heading{
+    text-align: center;
+font-family: Work Sans;
+font-size: 95px;
+font-weight: 800;
+text-transform: uppercase;
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+   
+}
+.pera{
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 20px;
+    
+
+   
+
+}
+.play-heading{
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 600;
+
+}
+.btn-sing{
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 48px;
+     background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+     padding: 10px 40px;
+     border: none;
+     
+
+
+
+}
+.btn-go{
+    color: #FFF;
+   font-size: 20px;
+   font-weight: 600;
+   border-radius: 48px;
+   background: #4EC5F7;
+   border: none;
+   padding: 10px 40px;
+
+
+}
+.button{
+    gap: 20px;
+    margin-top: 20px;
+}
+.goat-container{
+    background-image: url(./images/Group\ 14.png);
+    padding: 150px 200px;
+    
 }
