--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ li>a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 200px;
+    /* gap: 200px; */
 }
 .banner-img{
     width: 600px;
@@ -118,6 +118,98 @@ background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
 }
 .goat-container{
     background-image: url(./images/Group\ 14.png);
-    padding: 150px 200px;
+    padding: 150px 200px; 
+    background-position: center;
+    background-size: contain;
     
+}
+.we-are-gamer-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.we-are-gamer-container{
+    padding: 0px 200px;
+}
+   
+.we-are-gamer-content{
+    text-align: right;
+    
+}
+.content-pera{
+    width: 520px;
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 20px;
+
+}
+.content-heading{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-size: 48px;
+font-weight: 700;
+margin-bottom: 20px;
+
+}
+.content-pera2{
+    color: #534C64;
+text-align: right;
+font-size: 24px;
+font-weight: 500;
+margin-bottom: 10px;
+
+}
+.content-pera3{
+    color: #534C64;
+
+font-size: 32px;
+font-weight: 700;
+
+}
+.more{
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* ths is for mobile screen */
+@media screen and (max-width:576px) {
+    .menu-container ,li{
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    .banner-container{
+        flex-direction: column-reverse;
+        
+    }
+    .banner-img{
+        width: 300px;
+        margin-right: 0px;
+    }
+    .follow-us-section{
+        width: 262px;
+        height: 56px;
+        padding: 0px 10px;
+    }
+    .banner-container{
+        /* gap: 10px; */
+        align-items: center;
+    }
+    .goat-container{
+        padding: 0px;
+    }
 }
