--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
      background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
      padding: 10px 40px;
      border: none;
-     
+     cursor: pointer;
 
 
 
@@ -109,12 +109,14 @@ background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
    background: #4EC5F7;
    border: none;
    padding: 10px 40px;
+   cursor: pointer;
 
 
 }
 .button{
     gap: 20px;
     margin-top: 20px;
+    
 }
 .goat-container{
     background-image: url(./images/Group\ 14.png);
@@ -173,6 +175,7 @@ font-weight: 700;
 }
 .more{
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 
@@ -188,7 +191,7 @@ font-weight: 700;
 
 /* ths is for mobile screen */
 @media screen and (max-width:576px) {
-    .menu-container ,li{
+    .menu-container ,li,.we-are-gamer-container{
         flex-direction: column;
         margin-top: 10px;
     }
@@ -206,10 +209,88 @@ font-weight: 700;
         padding: 0px 10px;
     }
     .banner-container{
-        /* gap: 10px; */
+         gap: 10px; 
         align-items: center;
     }
     .goat-container{
         padding: 0px;
     }
+    .we-gamer-img{
+       width: 400px;
+    }
+    .we-are-gamer-content{
+        text-align: center;
+    }
+    .content-pera2{
+        text-align: center;
+        font-size: medium;
+    }
+    .content-pera{
+        width: 400px;
+        font-size: medium;
+        text-align: center;
+    }
+    .content-pera3{
+        font-size: 23px;
+    }
+}
+
+
+
+
+
+
+/* ths is for pad or medium mobile screen */
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    .menu-container ,.we-are-gamer-container{
+          
+      flex-direction: column;
+      gap: 20px;
+     
+      
+    }
+    li>a{
+        width: 
+        150px
+        
+         
+    
+    }
+
+
+    .follow-us-section{
+        width: 260px;
+        height: 56px;
+        
+    }
+    .banner-container{
+    flex-direction: column-reverse;
+}
+
+
+.banner-img{
+   margin: 0px auto;
+}
+.we-are-gamer-content{
+    text-align: center;
+}
+.content-pera2{
+    text-align: center;
+    font-size: medium;
+}
+.content-pera{
+    width: 400px;
+    font-size: medium;
+    text-align: center;
+}
+.content-pera3{
+    font-size: 23px;
+}
+.we-gamer-img{
+    width: 700px;
+
+
+}
+
 }
