--- a/style.css
+++ b/style.css
@@ -177,10 +177,39 @@ font-weight: 700;
     margin-bottom: 20px;
     cursor: pointer;
 }
+.online-game-heading{
+    color: #0B0223;
+text-align: center;
+font-size: 48px;
+font-weight: 700;
+margin-top: 100px;
+
+}
+.content-pera4{
+    color: #534C64;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+margin-top: 30px;
+
+}
+.online-games-picture-box{
+    display: flex;
+    justify-content: space-between;
+    padding: 150px 200px;
+}
+
+.online-game-pera{
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 500;
+    width: 342px;
+
+}
 
 
 
-
+ 
 
 
 
