--- a/style.css
+++ b/style.css
@@ -242,6 +242,87 @@ margin-top: 30px;
     top: -270px;
     right: 150px;
 }
+.games-name{
+    display: flex;
+    justify-content: center;
+    margin: 0px 200px;
+    gap: 50px;
+}
+.main-game{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.game-heading{
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+
+}
+.games-name-container{
+    margin-bottom: 120px;
+}
+.second-games-name-container{
+    display: flex;
+    justify-content: center;
+    margin: 0px 200px;
+    gap: 50px;
+    margin-top: 60px;
+}
+
+
+
+.g{
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+
+}
+.about-container{
+    display: flex;
+    color: white;
+    justify-content: center;
+     margin-top: 30px;
+     gap: 20px;
+     cursor: pointer;
+}
+.footer-icon{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    gap: 30px;
+    cursor: pointer;
+}
+.conditions-container{
+    display: flex;
+    color: white;
+    justify-content: center;
+    margin-top: 30px;
+    cursor: pointer;
+    gap: 20px;
+}
+
+.footer{
+    background: #0B0223;
+    padding: 200px 550px;
+}
+
+.mer{
+    color: white;
+}
+
+.footer-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+
+
+
+
 
 
 
@@ -298,7 +379,45 @@ margin-top: 30px;
         align-items: center;
         gap: 20px;
     }
+    .paly-download-container{
+        flex-direction: column;
+        margin: 0px 200px 0px 400px;
+    }
+   
+    
+    .play-download-heading{
+      
+        margin-right: 400px;
+        text-align: center;
 }
+.play-download-img{
+    width: -900px;
+}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
